[package]
name = "echo"
version = "0.1.0"
description = "A simple operating system written in Rust"
readme = "README.md"
repository = "https://www.github.com/AdamBrown0/Echo.git"
license = "GPL-3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.28"
volatile = "0.2.6"
spin = "0.9.8"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
x86_64 = "0.15.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]