[package]
name = "echo"
version = "0.1.0"
description = "A simple operating system written in Rust"
readme = "README.md"
repository = "https://www.github.com/AdamBrown0/Echo.git"
license = "GPL-3"
edition = "2021"

#[profile.dev]
#panic = "abort"
#
#[profile.release]
#panic = "abort"

[build-dependencies]
bootloader = { git = "https://github.com/rust-osdev/bootloader" }
bootloader-boot-config = { git = "https://github.com/rust-osdev/bootloader" }
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
ovmf-prebuilt = "0.1.0-alpha.1"

#[package.metadata.bootimage]
#test-args = [
#    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
#    "-display", "none"
#]
#test-success-exit-code = 33         # (0x10 << 1) | 1

[workspace]
members = ["kernel", "tests"]
