cargo-features = ["per-package-target"]

[package]
name = "echo-tests"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

[dependencies]
kernel = { path = "../kernel" }
bootloader_api = { git = "https://github.com/rust-osdev/bootloader" }
volatile = "0.2.6"
spin = "0.9.8"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
x86_64 = "0.14.2"
uart_16550 = "0.3.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]